--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "15.1.0",
     "react-native": "0.28.0",
+    "react-native-router-flux": "^3.30.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   }
